# St-Louis-County-2050-Plan

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  FORK_GUIDE.md  LICENSE  README.md  SECURITY.md  SKILL.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  vitest.config.ts
.github/: pull_request_template.md
assets/: benchmark-data.csv  department-catalog.csv  sample-assessments.json  sample-journey.json  sample-kpis.json
evals/: evals.json
references/: case-studies.md  change-management.md  constituent-journeys.md  data-sources.md  demand-forecasting.md  employee-toolkit.md  government-operations.md  improvement-playbook.md  kpi-framework.md  missouri-legal-context.md  onboarding-curriculum.md  resident-service-guides.md  workforce-development.md
schemas/: api-routes.json  competency-data-model.json  kpi-data-model.json
scripts/: benchmark_comparator.py  capacity_calculator.py  chatbot_export.py  dashboard-spec.md  dashboard_generator.py  data_quality_auditor.py  demo.sh  integrations.py  journey_scorer.py  kpi_scorer.py  ksab_gap_calculator.py  migrate-from-replit.mjs  migrate-lois247-from-replit.mjs  onboarding_plan_generator.py  pull-secrets.mjs  run.py  scorecard_renderer.py  service_finder_generator.py  test-e2e.mjs
src/: middleware.ts  proxy.ts
templates/: action-plan-template.md  council-briefing-template.md  district-scorecard-template.md  individual-development-plan-template.md  ksab-gap-analysis-template.md  scorecard-template.md  training-needs-assessment-template.md
(+105 files in other folders)
